--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,12 @@
-[workspace]
-members = [
-    "lis-token",
-]
+[package]
+name = "realis-near"
+version = "0.1.0"
+edition = "2021"
+
+[lib]
+crate-type = ["cdylib"]
+
+[dependencies]
+near-contract-standards = "4.0.0"
+near-sdk = "4.0.0"
+hex = "0.4.3"
