--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -4,7 +4,6 @@ on: push
 
 env:
   RUST_BACKTRACE: 1
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,8 +15,10 @@ jobs:
         with:
           profile: minimal
           #toolchain: nightly-2021-11-18 # Pinned because of compilation error on later version, should unpin later.
+          toolchain: nightly
           target: wasm32-unknown-unknown
       - run: cargo build
+      - run: cargo +nightly build
 
   build-release:
     runs-on: ubuntu-latest
@@ -29,8 +30,10 @@ jobs:
         with:
           profile: minimal
           #toolchain: nightly-2021-11-18 # Pinned because of compilation error on later version, should unpin later.
+          toolchain: nightly
           target: wasm32-unknown-unknown
       - run: cargo build --release
+      - run: cargo +nightly build --release
 
   fmt:
     runs-on: ubuntu-latest
@@ -42,9 +45,11 @@ jobs:
         with:
           profile: minimal
           #toolchain: nightly
+          toolchain: nightly
           target: wasm32-unknown-unknown
           components: rustfmt
       - run: cargo fmt
+      - run: cargo +nightly fmt
 
   lint:
     runs-on: ubuntu-latest
@@ -56,9 +61,11 @@ jobs:
         with:
           profile: minimal
           #toolchain: nightly
+          toolchain: nightly
           target: wasm32-unknown-unknown
           components: clippy
       - run: cargo clippy
+      - run: cargo +nightly clippy
 
   udeps:
     runs-on: ubuntu-latest
@@ -84,7 +91,6 @@ jobs:
           target: wasm32-unknown-unknown
           components: udeps
       - run: cargo +nightly udeps
-
   tests:
     runs-on: ubuntu-latest
     steps:
@@ -94,6 +100,8 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-         # toolchain: nightly-2021-11-18 # Pinned because of compilation error on later version, should unpin later.
+          # toolchain: nightly-2021-11-18 # Pinned because of compilation error on later version, should unpin later.
+          toolchain: nightly
           target: wasm32-unknown-unknown
       - run: cargo test
+      - run: cargo +nightly test
