implements methods burn and transfer im backend api and public api

--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -15,9 +15,9 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          #toolchain: nightly-2021-11-18 # Pinned because of compilation error on later version, should unpin later.
+          toolchain: nightly
           target: wasm32-unknown-unknown
-      - run: cargo build
+      - run: cargo +nightly build
 
   build-release:
     runs-on: ubuntu-latest
@@ -28,9 +28,9 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          #toolchain: nightly-2021-11-18 # Pinned because of compilation error on later version, should unpin later.
+          toolchain: nightly
           target: wasm32-unknown-unknown
-      - run: cargo build --release
+      - run: cargo +nightly build --release
 
   fmt:
     runs-on: ubuntu-latest
@@ -41,10 +41,10 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          #toolchain: nightly
+          toolchain: nightly
           target: wasm32-unknown-unknown
           components: rustfmt
-      - run: cargo fmt
+      - run: cargo +nightly fmt
 
   lint:
     runs-on: ubuntu-latest
@@ -55,10 +55,10 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          #toolchain: nightly
+          toolchain: nightly
           target: wasm32-unknown-unknown
           components: clippy
-      - run: cargo clippy
+      - run: cargo +nightly clippy
 
   udeps:
     runs-on: ubuntu-latest
@@ -94,6 +94,6 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-         # toolchain: nightly-2021-11-18 # Pinned because of compilation error on later version, should unpin later.
+          toolchain: nightly
           target: wasm32-unknown-unknown
-      - run: cargo test
+      - run: cargo +nightly test
