--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -15,7 +15,7 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: default
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - run: cargo build
 
