Try build without nightly

--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -28,7 +28,7 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - run: cargo build --release
 
@@ -41,7 +41,7 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
           components: rustfmt
       - run: cargo fmt
@@ -55,7 +55,7 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
           components: clippy
       - run: cargo clippy
@@ -69,7 +69,7 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - uses: actions-rs/cargo@v1
         name: "Udeps Installation"
@@ -80,7 +80,7 @@ jobs:
         name: "Unused Dependency Check"
         with:
           profile: minimal
-          #toolchain: nightly
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
           components: udeps
       - run: cargo udeps
@@ -94,6 +94,6 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - run: cargo test
