--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -80,7 +80,7 @@ jobs:
         name: "Unused Dependency Check"
         with:
           profile: minimal
-          toolchain: stable-x86_64-unknown-linux-gnu
+          toolchain: nightly
           target: wasm32-unknown-unknown
           components: udeps
       - run: cargo udeps
