--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -82,7 +82,7 @@ jobs:
           toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
           components: udeps
-      - run: cargo +nightly udeps
+      - run: cargo udeps
 
   tests:
     runs-on: ubuntu-latest
