--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -40,10 +40,10 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
           components: rustfmt
-      - run: cargo +nightly fmt
+      - run: cargo fmt
 
   lint:
     runs-on: ubuntu-latest
@@ -54,10 +54,10 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
           components: clippy
-      - run: cargo +nightly clippy
+      - run: cargo clippy
 
   udeps:
     runs-on: ubuntu-latest
@@ -79,7 +79,7 @@ jobs:
         name: "Unused Dependency Check"
         with:
           profile: minimal
-          #toolchain: nightly
+          toolchain: nightly
           target: wasm32-unknown-unknown
           components: udeps
       - run: cargo +nightly udeps
