--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -79,7 +79,7 @@ jobs:
         name: "Unused Dependency Check"
         with:
           profile: minimal
-          toolchain: nightly
+          #toolchain: nightly
           target: wasm32-unknown-unknown
           components: udeps
       - run: cargo +nightly udeps
