--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -68,7 +68,7 @@ jobs:
         name: "Rust Toolchain Setup"
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: nightly-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - uses: actions-rs/cargo@v1
         name: "Udeps Installation"
@@ -79,10 +79,11 @@ jobs:
         name: "Unused Dependency Check"
         with:
           profile: minimal
-          #toolchain: nightly
+          toolchain: nightly
           target: wasm32-unknown-unknown
           components: udeps
       - run: cargo +nightly udeps
+
   tests:
     runs-on: ubuntu-latest
     steps:
