--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -17,6 +17,8 @@ jobs:
           toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - run: cargo build
+        env:
+          RUSTFLAGS: "-D warnings"
 
   build-release:
     runs-on: ubuntu-latest
@@ -43,7 +45,7 @@ jobs:
           toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
           components: rustfmt
-      - run: cargo fmt
+      - run: cargo fmt --all --check
 
   lint:
     runs-on: ubuntu-latest
