--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib","rlib"]
 
 [dependencies]
 near-contract-standards = "4.0.0"
 near-sdk = "4.0.0"
 hex = "0.4.3"
 primitive-types = "0.7.0"
+
+[dev-dependencies]
+workspaces = { git = "https://github.com/near/workspaces-rs", package = "workspaces" }
+anyhow = "1.0.57"
+tokio =  "1.19.2"
