--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -97,4 +97,5 @@ jobs:
           profile: minimal
           toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
+      - run: make build
       - run: cargo test
