--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -98,4 +98,5 @@ jobs:
           toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - run: make build
-      - run: cargo test
+      - run: cargo test --  --test-threads=1
+
