--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -86,7 +86,7 @@ jobs:
           components: udeps
       - run: cargo +nightly udeps
 
-  tests:
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -98,4 +98,18 @@ jobs:
           toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - run: make build
-      - run: cargo test
+      - run: cargo test --lib
+
+  integration-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        name: "Repository Checkout"
+      - uses: actions-rs/toolchain@v1
+        name: "Rust Toolchain Setup"
+        with:
+          profile: minimal
+          toolchain: stable-x86_64-unknown-linux-gnu
+          target: wasm32-unknown-unknown
+      - run: make build
+      - run: cargo test --test mod -- --test-threads=1
