--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ hex = "0.4.3"
 primitive-types = "0.7.0"
 
 [dev-dependencies]
-workspaces = { git = "https://github.com/near/workspaces-rs", package = "workspaces" }
+workspaces = { git = "https://github.com/near/workspaces-rs", package = "workspaces", version = "0.3.0" }
 anyhow = "1.0.57"
 tokio =  "1.19.2"
