--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,13 @@
 [workspace]
 members = [
-    "lis-token",
+    "ft-token-contract",
+    "ft-lockup-contract",
 ]
+
+[profile.release]
+codegen-units=1
+opt-level = "z"
+lto = true
+debug = false
+panic = "abort"
+overflow-checks = true
