--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,14 @@
-[package]
-name = "realis-near"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "ft-token-contract",
+    "ft-lockup-contract",
+    "nft-token-contract",
+]
 
-[lib]
-crate-type = ["cdylib","rlib"]
-
-[dependencies]
-near-contract-standards = "4.0.0"
-near-sdk = "4.0.0"
-hex = "0.4.3"
-primitive-types = "0.7.0"
-
-[dev-dependencies]
-workspaces = { version = "0.3.0", git = "https://github.com/near/workspaces-rs" }
-anyhow = "1.0.57"
-tokio =  "1.19.2"
-
-[features]
-default = []
-dev = []
+[profile.release]
+codegen-units=1
+opt-level = "z"
+lto = true
+debug = false
+panic = "abort"
+overflow-checks = true
