--- a/.github/workflows/check_set_up_and_build.yml
+++ b/.github/workflows/check_set_up_and_build.yml
@@ -98,18 +98,4 @@ jobs:
           toolchain: stable-x86_64-unknown-linux-gnu
           target: wasm32-unknown-unknown
       - run: make build
-      - run: cargo test --lib
-
-  integration-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        name: "Repository Checkout"
-      - uses: actions-rs/toolchain@v1
-        name: "Rust Toolchain Setup"
-        with:
-          profile: minimal
-          toolchain: stable-x86_64-unknown-linux-gnu
-          target: wasm32-unknown-unknown
-      - run: make build
-      - run: cargo test --test mod -- --test-threads=1
+      - run: cargo test
