impl staking contract

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "ft-token-contract",
+    "ft-staking-contract",
     "ft-lockup-contract",
     "nft-token-contract",
 ]
