--- a/ft-lockup-contract/Cargo.toml
+++ b/ft-lockup-contract/Cargo.toml
@@ -16,3 +16,4 @@ near-units = "0.2.0"
 workspaces = { version = "0.6.0", features = ["unstable"] }
 anyhow = "1.0.66"
 tokio = { version = "1.21.2", features = ["test-util"], default-features = false }
+test-utils = { path = "../test-utils" }
