impl stake & unstake tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [workspace]
 members = [
+    "fake-lockup-contract",
     "ft-token-contract",
     "ft-staking-contract",
     "ft-lockup-contract",
     "nft-token-contract",
-    "test-utils"
+
 ]
-exclude = []
+exclude = ["test-utils"]
 
 [profile.release]
 codegen-units=1
