--- a/test-utils/Cargo.toml
+++ b/test-utils/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 near-units = "0.2.0"
 workspaces = { version = "0.6.0", features = ["unstable"] }
+near-contract-standards = "4.0.0"
 anyhow = "1.0.66"
 near-sdk = "4.0.0"
